--- a/grid-style.css
+++ b/grid-style.css
@@ -70,11 +70,6 @@ footer {
 	clear: both;
 }
 
-nav {
-	width: 70%;
-	display: inline-block;
-}
-
 img {
 	max-width: 100%;
 	max-height: 100%;
@@ -144,12 +139,42 @@ nav a:visited {
 
 .other-news-item {
 	display: inline-block;
-	width: 24%;
+	width: 49%;
 	/*height: 25%;*/
 }
 
 .other-news-item img {
 	width: 100%;
 	height: 10em;
-	object-fit: contain;
+	object-fit: cover;
+}
+
+nav {
+    display: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+/*    min-width: 160px;*/
+/*    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+/*    padding: 12px 16px;*/
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
